# Lacuna

./: .env.example  .eslintrc.cjs  .gitignore  AGENTS.md  BROWSER_QA_AUDIT.md  CHANGES.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  SPEC.md  eslint.config.js  index.html  new_features_list.md  next_plan.md  package-lock.json  package.json  vercel.json  vite.config.ts  vitest-report.json  vitest.config.ts  vitest.setup.ts
tooling/semantic-answer-match/: .gitignore  README.md  pyproject.toml
tooling/semantic-answer-match/data/held_out/: tricky_paraphrases.jsonl
tooling/semantic-answer-match/match_harness/: __init__.py  cli.py  features.py  ingest.py  pairs.py  pipeline.py  schema.py
tooling/semantic-answer-match/prompts/: generation_prompt.md
tooling/semantic-answer-match/scripts/: compare_answer_baseline.ts
tooling/semantic-answer-match/tests/: test_ingest.py  test_pipeline.py
tooling/short-term-memory/: .gitignore  BENCHMARK.md  README.md  ROUTING_DECISION_RULE.md  VALIDATION_PLAN.md  pyproject.toml
tooling/short-term-memory/coefficients/: half-life-logistic-v1.json  half-life-logistic-v2.json  half-life-logistic-v3.json
tooling/short-term-memory/stm_harness/: __init__.py  acquire.py  cli.py  contract.py  evaluate.py  examples.py  io.py  metrics.py  selection.py
tooling/short-term-memory/stm_harness/candidates/: __init__.py  actr.py  common.py  fsrs6.py  fsrs6_fractional.py  half_life.py  half_life_frozen.py  (+3 more)
tooling/short-term-memory/tests/: test_acquire.py  test_candidates.py  test_evaluate.py  test_examples.py  test_metrics.py  test_selection.py
(+592 files in other folders)
