[project]
name = "lacuna-stm-harness"
version = "0.1.0"
description = "Offline dataset and evaluation harness for Lacuna short-term memory models"
requires-python = ">=3.12"
dependencies = [
  "huggingface-hub>=0.34,<2",
  "pyarrow>=18,<23",
]

[project.scripts]
stm-harness = "stm_harness.cli:main"

[dependency-groups]
dev = [
  "pytest>=8,<10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stm_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
